--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,10 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^1.12.4",
+    "jquery": "^1.9.1",
     "bootstrap-material-design": "^0.5.10"
+  },
+  "resolutions": {
+    "jquery": "^2.2"
   }
 }
