--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "jquery": "^1.9.1",
     "bootstrap-material-design": "^0.5.10",
     "angular": "^1.6.1",
-    "angular-route": "^1.6.1"
+    "angular-route": "^1.6.1",
+    "c3": "^0.4.11"
   },
   "resolutions": {
     "jquery": "^2.2"
