--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Application de gestion de portefeuille d'actions, Master 2 SID",
   "main": "index.js",
   "dependencies": {
-
+    "angular": "^1.6.1",
+    "angular-route": "^1.6.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-material-design": "^0.5.10",
+    "c3": "^0.4.11",
+    "jquery": "^3.1.1"
   },
   "devDependencies": {},
   "scripts": {
