--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "wally",
   "version": "1.0.0",
   "description": "Application de gestion de portefeuille d'actions, Master 2 SID",
-  "main": "index.js",
   "dependencies": {
     "angular": "^1.6.1",
     "angular-route": "^1.6.1",
     "bootstrap": "^3.3.7",
     "bootstrap-material-design": "^0.5.10",
     "c3": "^0.4.11",
-    "jquery": "^3.1.1"
+    "express": "^4.14.1",
+    "jquery": "^3.1.1",
+    "mongoose": "^4.8.1",
+    "nodemon": "^1.11.0"
   },
   "devDependencies": {},
   "scripts": {
