--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-route": "^1.6.1",
+    "body-parser": "^1.16.0",
     "bootstrap": "^3.3.7",
     "bootstrap-material-design": "^0.5.10",
     "c3": "^0.4.11",
     "express": "^4.14.1",
     "jquery": "^3.1.1",
-    "mongoose": "^4.8.1",
-    "nodemon": "^1.11.0"
+    "mongoose": "^4.8.1"
   },
   "devDependencies": {},
   "scripts": {
