--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
-    "mongoose": "^4.8.1"
+    "mongoose": "^4.8.1",
+    "request": "^2.79.0"
   },
   "devDependencies": {},
   "scripts": {
